<resources>
    <string name="app_name">Tenet</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="tenet_string">Tenet</string>
    <string name="forgot_my_password_string"><u>Forgot my password</u></string>
    <string name="password_string">Password</string>
    <string name="email_or_phone_number_string">Email or Phone number</string>
    <string name="username_string">Enter Username</string>
    <string name="sign_up_string">Sign up</string>
    <string name="sign_in_string">Sign in</string>
    <string name="tenant_string">Tenet</string>
    <string name="accept_terms_and_conditions_string">Accept Terms and Conditions</string>
    <string name="____input_text_string">Enter your city</string>
    <string name="____label_string">Location</string>
    <string name="____label_ek1_string">View</string>
    <string name="____label_ek2_string">Clear</string>

    <string name="____label_string_rpmin">$0</string>
    <string name="____label_ek1_string_rpmax">$5000</string>
    <string name="____label_ek2_string_rp">Rent Price</string>
    <string name="left_bdroom_limit">0</string>
    <string name="right_bdroom_limit">5</string>
    <string name="bedroom_slider_label">Bedroom</string>
    <string name="bathroom_slider_label">Bathroom</string>
    <string name="parking_slider_label">Parking Spot</string>
    <string name="utilities_label">Utilities</string>
    <string name="hydro_label">Hydro</string>
    <string name="heating_label">Heating</string>
    <string name="water_label">Water</string>
    <string name="wifi_label">Internet</string>
    <string name="cable_label">Cable/TV</string>
    <string name="amenities_label">Amenities</string>
    <string name="ac_label">A/C</string>
    <string name="gym_label">Fitness</string>
    <string name="laundry_label">Laundry</string>
    <string name="pool_label">Pool</string>
    <string name="dishwasher_label">Dishwasher</string>

    <string name="____input_text_string_chat">The last sent message...</string>
    <string name="____label_string_chat">Gerrardo</string>
    <string name="____input_text_ek1_string">Date</string>
    <string name="search_messages_string">Search Messages</string>

    <string name="message_date_string">2022-10-08</string>
    <string name="message__string">Message </string>
    <string name="message__ek1_string">Message </string>

    <string name="____input_text_string_settings">My name</string>
    <string name="____label_string_settings">Name</string>
    <string name="____input_text_ek1_string_settings">My email</string>
    <string name="____label_ek1_string_settings">Email</string>
    <string name="____input_text_ek2_string">My password</string>
    <string name="____label_ek2_string_settings">Password</string>
    <string name="____label_ek3_string">Notifications</string>
    <string name="____label_ek4_string">Profile</string>
    <string name="____label_ek5_string">Done</string>
    <string name="____label_ek6_string">Logout</string>

<!--    Toasts  -->
    <string name="toastEnterField">Please enter all the fields</string>
    <string name="toastRegSuccess">Registration Successful</string>
    <string name="toastAlrReg">Already Registered</string>
    <string name="toastSigninWelcome">Welcome to Sign In</string>

<!--    Dialog  -->
    <string name="DialogTitle">Sign Out</string>
    <string name="DialogMsg">Make sure to save any changes made</string>
    <string name="DialogOk">Ok</string>
    <string name="DialogCancel">Sign Out</string>

<!--    View button-->
    <string name="viewButtontxt">View</string>
    <string name="username2_string">Username</string>
    <string name="usernameString">Enter Username</string>

    <!-- key should be in local.properties file so that while uploading your code to a remote git repository, you do not end up uploading your key as well. -->
    <string name="google_maps_api_key" translatable="false">AIzaSyB9kJoNq3VRUVGUntwBtYZw7mIJdZctxb8</string>
    <string name="UserText2">User</string>
    <string name="usernameText">username</string>

    <!--    new Strings (hello Patrick, please translate these below -->
    <string name="resetPassSnack">Passwords do not match, please re-write</string>
    <string name="enterUsername2">Please enter username</string>
    <string name="userNotExist">Username does not Exist</string>
    <string name="passSuccess">Password Successfully changed</string>
    <string name="passNotSuccess">Error, please try again</string>
    <string name="enterEmail">What is your Email?</string>
    <string name="entries">No Entries exists</string>
    <string name="builderUserInfo">User Information</string>
    <string name="EntryUpdated">Entry Updated !</string>
    <string name="EntryNotUpdated">Entry not Updated !</string>
    <string name="LoginSuccessful">Login Successful</string>
    <string name="InvalidCredentials">Invalid Credentials</string>
    <string name="SignUpWelcome">SignUp Welcome</string>
    <string name="PasswordReset">Password Reset</string>
    <string name="UserUserText">UserName</string>


    <!--    new Strings (hello Patrick, please translate these above -->

</resources>